--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "set NODE_ENV=test& jest --runInBand",
     "start-dev": "nodemon -e ts,json src/server.ts"
   },
   "author": "",
@@ -21,8 +21,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
     "@types/sequelize": "^4.28.20",
-    "@types/validator": "^13.11.9"
+    "@types/validator": "^13.11.9",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2"
   }
 }
